# ChenEduSys

./: .gitignore  README.md  context.md  demo_paint.py  environment.yml  init.md  plan.md  pyproject.toml
hub_server/: admin.py  auth.py  database.py  main.py  requirements.txt  signaling.py
src/chenedusys/: __init__.py  __main__.py  app.py
src/chenedusys/ai/: question_pdf.py  scanner.py  segmenter.py  tutor.py
src/chenedusys/core/: config.py  event_bus.py  events.py  logger.py  models.py
src/chenedusys/services/: audio.py  auth.py  content_sync.py  meeting.py  paint_engine.py
src/chenedusys/transport/: nat.py  p2p_client.py  p2p_server.py  protocol.py  security.py  signaling.py
src/chenedusys/ui/widgets/: audio_controls.py  content_view.py  toolbar.py  (+4 more)
tests/: conftest.py
tests/edge_cases/: test_audio_edge.py  test_content_edge.py  test_event_bus_edge.py  test_hub_edge.py  test_p2p_edge.py  test_paint_edge.py
tests/fixtures/: generate_scanner_fixtures.py  generate_segmenter_fixtures.py
tests/fixtures/scanner/: fixtures_meta.json
tests/fixtures/segmenter/: fixtures_meta.json
tests/integration/: test_auth_flow.py  test_p2p_flow.py  test_paint_eventbus.py
tests/unit/: test_admin.py  test_audio.py  test_config.py  test_content_sync.py  test_event_bus.py  test_hub_auth.py  test_hub_database.py  test_logger.py  test_models.py  test_nat.py  test_p2p_client.py  test_p2p_server.py  test_paint_engine.py  test_protocol.py  test_scanner.py  test_scanner_window.py  test_security.py  test_segmenter.py  test_segmenter_window.py  test_tutor.py  test_tutor_panel.py
(+5 files in other folders)
