[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chenedusys"
version = "0.1.0"
description = "Peer-to-peer education platform for 1-on-1 and small-group tutoring"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "PySide6>=6.6,<7",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "msgpack>=1.0,<2",
    "aiohttp>=3.9,<4",
    "aiohttp-cors>=0.7",
    "argon2-cffi>=23.1",
    "PyJWT>=2.8,<3",
    "keyring>=24.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.2",
]

[project.scripts]
chenedusys = "chenedusys.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chenedusys"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
